added meta responsive to index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Lethal Self Defense</title>
     <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto:100|Teko&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Nosifer&display=swap" rel="stylesheet">
     <meta name="Defense, Ebooks, Books, Guide, Self, Offensive, Ebooks, Kill, Military, Tactics, Martial, Arts, Martial Arts, Kung Fu Books, Karate Book, Martial arts, Learn, Learn Fighting, Fighting, Shaolin, Hands, Knife Fighting, Knife, Arwrology, Jujitsu, Learn Self Defense, Self Defense Online, Online, Kill people, Kill, Defend, Attack, Close, Combat, Close Combat, techniques, Combat,  Techniques, Military, Secrets, Secret, Top, Spetsnaz, kravmaga, learn kung fu, japanese, israeli, kenpo, defeat, battle, hands, only, physical, violence, brutal, replusive, offensive" content="">
