--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
           enable_page_level_ads: true
      });
 </script>
+    <style>
+      @media screen and (max-width: 600px){
+        .navbar a{
+          float: none;
+          width: 100%;
+        }
+      }
+    </style>
   </head>
   <body>
 
