--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
           float: none;
           width: 100%;
         }
+        #lsd {
+          float: none;
+          width: 100%;
+        }
       }
     </style>
   </head>
   <body>
 
     <div class="navbar">
+      <p><a id="lsd" href="#">lsd</a></p>
       <a href="content/martial.html">Martial Arts</a>
       <a href="content/lethal.html">Become Lethal</a>
       <a href="content/military.html">Military</a>
