responsive front page~!

--- a/index.html
+++ b/index.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>Lethal Self Defense</title>
-    <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>LETHAL DEFENSE</title>
+    <meta name="description" content="Collection of ebooks that will provide your body a lethal and offensive shield.">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto:100|Teko&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Nosifer&display=swap" rel="stylesheet">
-    <meta name="Defense, Ebooks, Books, Guide, Self, Offensive, Ebooks, Kill, Military, Tactics, Martial, Arts, Martial Arts, Kung Fu Books, Karate Book, Martial arts, Learn, Learn Fighting, Fighting, Shaolin, Hands, Knife Fighting, Knife, Arwrology, Jujitsu, Learn Self Defense, Self Defense Online, Online, Kill people, Kill, Defend, Attack, Close, Combat, Close Combat, techniques, Combat,  Techniques, Military, Secrets, Secret, Top, Spetsnaz, kravmaga, learn kung fu, japanese, israeli, kenpo, defeat, battle, hands, only, physical, violence, brutal, replusive, offensive" content="">
-    <meta name="description" content="Lethal Self Defense has ebooks that will provide your body some offensive security.">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-8025125971470854",
-          enable_page_level_ads: true
-     });
-</script>
-    </style>
+    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="mobi.js">
+    </script>
   </head>
   <body>
 
     <div class="navbar">
-      <p><a id="lsd" href="#">lsd</a></p>
+      <a id="lsd" href="/index.html">LSD</a>
       <a href="content/martial.html">Martial Arts</a>
       <a href="content/lethal.html">Become Lethal</a>
       <a href="content/military.html">Military</a>
       <a href="content/kill.html">How To Kill</a>
+      <a id="mbtn" href="JavaScript:Void(0);" onclick="openNav()">&#9776</a>
+      <a href="JavaScript:Void(0)" id="xbtn" onclick="closeNav()">&times;</a>
     </div>
+    <div id="overnav" class="overnav">
 
-    <div class="main">
-      <div class="baba">
-        <h2>"I don't even call it violence when it's in self <br> defense; I call it <span style="color:rgb(71, 176, 34)" >intelligence.</span> "</h2>
+      <div class="overcontent">
 
-          <h3>(Malcolm X)</h3>
+        <a href="content/kill.html">How To Kill</a>
+        <a href="content/martial.html">Martial Arts</a>
+        <a href="content/lethal.html">Become Lethal</a>
+        <a href="content/military.html">Military</a>
       </div>
 
     </div>
+    <div class="contentarea">
+      <h2>"I don't even call it violence when it's in self <br> defense; I call it <span style="color:rgb(71, 176, 34)" >intelligence.</span> "</h2>
+      <h3>(Malcolm X)</h3>
 
-</body>
+    </div>
+    <div class="footer">
+      <a href="https://www.instagram.com/kedarojas"><i class="fa fa-instagram" aria-hidden="true"></i> /kedarojas
+</a>
+    </div>
+  </body>
 </html>
+</script>
