--- a/content/resmilitary.html
+++ b/content/resmilitary.html
@@ -7,19 +7,19 @@
     <meta name="description" content="Collection of ebooks that will provide your body a lethal and offensive shield.">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto:100|Teko&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Nosifer&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="contentmaster.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="mobi.js">
+    <script src="../mobi.js">
     </script>
   </head>
   <body>
 
     <div class="navbar">
       <a id="lsd" href="/index.html">LSD</a>
-      <a href="content/resmartial.html">Martial Arts</a>
-      <a href="content/reslethal.html">Become Lethal</a>
-      <a href="content/resmilitary.html">Military</a>
-      <a href="content/reskill.html">How To Kill</a>
+      <a href="resmartial.html">Martial Arts</a>
+      <a href="reslethal.html">Become Lethal</a>
+      <a href="resmilitary.html">Military</a>
+      <a href="reskill.html">How To Kill</a>
       <a id="mbtn" href="JavaScript:Void(0);" onclick="openNav()">&#9776</a>
       <a href="JavaScript:Void(0)" id="xbtn" onclick="closeNav()">&times;</a>
     </div>
@@ -27,22 +27,21 @@
 
       <div class="overcontent">
 
-        <a href="content/reskill.html">How To Kill</a>
-        <a href="content/resmartial.html">Martial Arts</a>
-        <a href="content/reslethal.html">Become Lethal</a>
-        <a href="content/resmilitary.html">Military</a>
+        <a href="reskill.html">How To Kill</a>
+        <a href="resmartial.html">Martial Arts</a>
+        <a href="reslethal.html">Become Lethal</a>
+        <a href="resmilitary.html">Military</a>
+      </div>
+    </div>
+    <div class="books">
+      <div class="box">
+        <h3>MARINE CORPS MARTIAL ARTS</h3>
+        <hr>
+        <p>This book will cover the fundamentals of Marine Corps Martial Arts to include the purpose of close combat, ranges of close combat, weapons of the body, target areas of the body, pressure points, basic warrior stance, and angles of approach and movement, and body hardening. </p>
+        <hr>
+        <div class="dbtn"><a href="allmarine.pdf"> <button><i class="fa fa-download"></i> Download</button> </a></div>
       </div>
 
     </div>
-    <div class="contentarea">
-      <h2>"I don't even call it violence when it's in self <br> defense; I call it <span style="color:rgb(71, 176, 34)" >intelligence.</span> "</h2>
-      <h3>(Malcolm X)</h3>
-
-    </div>
-    <div class="footer">
-      <a href="https://www.instagram.com/kedarojas"><i class="fa fa-instagram" aria-hidden="true"></i> /kedarojas
-</a>
-    </div>
-  </body>
+</body>
 </html>
-</script>
