Updated! Responsive Website is Ready!

--- a/content/resmilitary.html
+++ b/content/resmilitary.html
@@ -39,9 +39,45 @@
         <hr>
         <p>This book will cover the fundamentals of Marine Corps Martial Arts to include the purpose of close combat, ranges of close combat, weapons of the body, target areas of the body, pressure points, basic warrior stance, and angles of approach and movement, and body hardening. </p>
         <hr>
-        <div class="dbtn"><a href="allmarine.pdf"> <button><i class="fa fa-download"></i> Download</button> </a></div>
+        <div class="dbtn">
+          <a href="allmarine.pdf"> <button><i class="fa fa-download"></i> Download</button> </a>
+        </div>
       </div>
-
+      <div class="box">
+        <h3>U.S. Marine Corps Individual Combat
+Course, July 1944 </h3>
+        <hr>
+        <p>The objective of the Individual Combat Course is to develop the individual
+through a process of physical conditioning and individual combat to his fullest
+potentialities as a fighter.</p>
+        <hr>
+        <div class="dbtn">
+          <a href="1944.pdf"> <button><i class="fa fa-download"></i> Download</button> </a>
+        </div>
+      </div>
+      <div class="box">
+        <h3>Close Combat Techniques</h3>
+        <hr>
+        <p>The compilation of some of the most important parts and best military advices on close combat.<br>All Credits to Mr. Clint Sporman and his website <b><a href="http://www.gutterfighting.org/" target="_blank" id="gutter" style="text-decoration: none; color: rgb(52, 109, 133)">gutterfighting.com</a></p>
+        <hr>
+        <div class="dbtn">
+          <a href="closecombat.pdf"> <button><i class="fa fa-download"></i> Download</button> </a>
+        </div>
+      </div>
+      <div class="box">
+        <h3>Knife Combat Version by Spetsnaz Training Association, Moscow 2005</h3>
+        <hr>
+        <p>The main mission of a Spetsnaz fighter is to destroy the enemy with any available means as quickly as
+possible despite their arms and superior number.
+The book presents the most effective knife fighting combinations and their
+use in different combat situations, including a combat against two armed
+enemies. Countermeasures against an enemy who is armed with a knife and
+uses those combinations against you are also considered.</p>
+        <hr>
+        <div class="dbtn">
+          <a href="Spetsnaz.pdf"> <button><i class="fa fa-download"></i> Download</button> </a>
+        </div>
+      </div>
     </div>
 </body>
 </html>
