--- a/content/reslethal.html
+++ b/content/reslethal.html
@@ -37,7 +37,7 @@
       <div class="box">
         <h3>Close Combat Techniques</h3>
         <hr>
-        <p>The compilation of some of the most important parts and best military advices from books on close combat.<br>All Credits to Mr. Clint Sporman and his website <b><a href="http://www.gutterfighting.org/" target="_blank" id="gutter" >gutterfighting.com</a><hr> </p>
+        <p>The compilation of some of the most important parts and best military advices from books on close combat.<br>All Credits to Mr. Clint Sporman and his website <b><a href="http://www.gutterfighting.org/" target="_blank" id="gutter" style="text-decoration: none; color: rgb(52, 109, 133)">gutterfighting.com</a></p>
         <hr>
         <div class="dbtn">
           <a href="closecombat.pdf"> <button><i class="fa fa-download"></i> Download</button> </a>
