--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     </div>
     <div class="footer">
-      <a href="https://www.instagram.com/kedarojas"><i class="fa fa-instagram" aria-hidden="true"></i> /kedarojas
+      <a href="https://www.instagram.com/ojaskedar"><i class="fa fa-instagram" aria-hidden="true"></i> /kedarojas
 </a>
     </div>
   </body>
