--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>LETHAL DEFENSE</title>
-    <meta property="og:image" content="https://lethaldefense.github.io/content/GSDFred.png">
+    <meta property="og:image" content="previewchota.png">
     <meta name="description" content="Collection of ebooks that will provide your body a lethal and offensive shield.">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto:100|Teko&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Nosifer&display=swap" rel="stylesheet">
